--- a/package.json
+++ b/package.json
@@ -3,21 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "5.11.9",
-    "@testing-library/react": "11.2.5",
-    "@testing-library/user-event": "12.7.0",
-    "@types/jest": "26.0.20",
-    "@types/node": "14.14.25",
-    "@types/react": "17.0.1",
-    "@types/react-dom": "17.0.0",
-    "husky": "5.0.9",
-    "lint-staged": "10.5.4",
-    "prettier": "2.2.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.2",
-    "typescript": "4.1.5",
-    "web-vitals": "1.1.0"
+    "@testing-library/jest-dom": "5.14.1",
+    "@testing-library/react": "12.1.2",
+    "@testing-library/user-event": "13.5.0",
+    "@types/jest": "27.0.2",
+    "@types/node": "16.11.4",
+    "@types/react": "17.0.32",
+    "@types/react-dom": "17.0.10",
+    "husky": "7.0.4",
+    "lint-staged": "11.2.4",
+    "prettier": "2.4.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-scripts": "4.0.3",
+    "typescript": "4.4.4",
+    "web-vitals": "2.1.2"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
