--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "@types/node": "16.11.4",
     "@types/react": "17.0.32",
     "@types/react-dom": "17.0.10",
-    "husky": "7.0.4",
     "lint-staged": "11.2.4",
     "prettier": "2.4.1",
     "react": "17.0.2",
@@ -52,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "husky": "7.0.4"
   }
 }
